--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   line-height: 34px;
   color: #777777;
   background: url("../images/dynamic-style.png");
+background: url("../images/concrete_seamless.png");
 }
 
 * {
@@ -97,5 +98,48 @@ footer {
 .btn btn-primary {
   background: #4aaaa5;
 }
+
+@media screen and (max-width: 960px) {
+ 
+  .wrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+.wrapper {
+  
+  width: 768px;
+
+  }
+ #logo {
+  width: 150px;
+  height: 80px;
+   
+ }
+ 
+}
+
+@media screen and (max-width: 640px) {
+  .wrapper {
+      max-width: 640px;
+      }
+   
+    header {
+      position: static;
+      width:100%;
+      max-width: 640px;
+      text-align: center;
+      display: block;
+    }
+    footer {
+      
+      position: fixed;
+      text-align: center;
+      height:auto;
+    }
+}
+
 
  
